--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -239,21 +239,21 @@
     </button>
     <ul class="dropdown-menu">
         <li id="LEDBtn1">
-            <a href="#" style="margin-bottom:4px;white-space: normal;" role="button">
+            <a style="margin-bottom:4px;white-space: normal;" role="button">
                 <div class="row">
                     Full Working Light
                 </div>
             </a>
         </li>
         <li id="LEDBtn2">
-            <a href="#" style="margin-bottom:4px;white-space: normal;" role="button">
+            <a style="margin-bottom:4px;white-space: normal;" role="button">
                 <div class="row">
                     Control Mode Working Light
                 </div>
             </a>
         </li>
         <li id="LEDBtn3">
-            <a href="#" style="margin-bottom:4px;white-space: normal;" role="button">
+            <a style="margin-bottom:4px;white-space: normal;" role="button">
                 <div class="row">
                     Lighting Off
                 </div>
@@ -264,7 +264,7 @@
     {% endif %}
 {% endif %}
 <br>
-
+{% include 'copyright.html.twig' %}
 <script type="text/javascript">
     $(document).ready(function() {
         sidebarPoll();
