--- a/app/Resources/views/UPSModule.html.twig
+++ b/app/Resources/views/UPSModule.html.twig
@@ -1,10 +1,18 @@
     <div class="panel panel-warning">
-        <div class="panel-heading">
+        {# <div class="panel-heading">
             UPS Status
         </div>
-        <ul class="list-group">
-            {% for ups in UPSs %}
-                <li class="list-group-item" id="ups-{{ ups.id }}" data-toggle="tooltip" data-placement="right" title="{{ ups.name }} - {{ ups.location }}">UPS{{ ups.id }}: Timeout</li>
-            {% endfor %}
-        </ul>
+        #}
+        <a data-toggle="collapse" href="#UPScollapse">
+            <div class="panel-heading">
+                UPS Status
+            </div>
+        </a>
+        <div id="UPScollapse" class="panel-collapse collapse">
+            <ul class="list-group ">
+                {% for ups in UPSs %}
+                    <li class="list-group-item" id="ups-{{ ups.id }}" data-toggle="tooltip" data-placement="right" title="{{ ups.name }} - {{ ups.location }}">UPS{{ ups.id }}: Timeout</li>
+                {% endfor %}
+            </ul>
+        </div>
     </div>
