Modified UPS menu

--- a/app/Resources/views/UPSModule.html.twig
+++ b/app/Resources/views/UPSModule.html.twig
@@ -4,8 +4,10 @@
         </div>
         #}
         <div class="panel-heading">
-            <a data-toggle="collapse" href="#UPScollapse">
-                UPS Status
+            <a data-toggle="collapse" href="#UPScollapse" style="margin-bottom:4px;white-space: normal;">
+                <div class="row">
+                    UPS Status
+                </div>
             </a>
         </div>
         <div id="UPScollapse" class="panel-collapse collapse">
