--- a/app/Resources/views/UPSModule.html.twig
+++ b/app/Resources/views/UPSModule.html.twig
@@ -4,7 +4,7 @@
         </div>
         #}
         <div class="panel-heading">
-            <a data-toggle="collapse" href="#UPScollapse" style="margin-bottom:4px;white-space: normal;">
+            <a data-toggle="collapse" href="#UPScollapse" style="text-decoration:none;">
                 <div class="row">
                     UPS Status
                 </div>
