--- a/app/Resources/views/UPSModule.html.twig
+++ b/app/Resources/views/UPSModule.html.twig
@@ -4,13 +4,11 @@
         </div>
         #}
         <div class="panel-heading">
-            <a data-toggle="collapse" href="#UPScollapse" style="text-decoration:none;">
-                <div class="row">
+            <a data-toggle="collapse" href="#UPScollapse" style="text-decoration:none !important;">
                     UPS Status
-                </div>
             </a>
         </div>
-        <div id="UPScollapse" class="panel-collapse collapse">
+        <div id="UPScollapse" class="panel-collapse collapse in">
             <ul class="list-group ">
                 {% for ups in UPSs %}
                     <li class="list-group-item" id="ups-{{ ups.id }}" data-toggle="tooltip" data-placement="right" title="{{ ups.name }} - {{ ups.location }}">UPS{{ ups.id }}: Timeout</li>
