Modified UPS Status menu

--- a/app/Resources/views/UPSModule.html.twig
+++ b/app/Resources/views/UPSModule.html.twig
@@ -3,10 +3,8 @@
             UPS Status
         </div>
         #}
-        <a data-toggle="collapse" href="#UPScollapse" style="text-decoration:none !important;">
-            <div class="panel-heading">
+        <a class="panel-heading" data-toggle="collapse" href="#UPScollapse" style="text-decoration:none !important;">
                 UPS Status
-            </div>
         </a>
         <div id="UPScollapse" class="panel-collapse collapse in">
             <ul class="list-group ">
