UPS status update

--- a/app/Resources/views/UPSModule.html.twig
+++ b/app/Resources/views/UPSModule.html.twig
@@ -3,9 +3,11 @@
             UPS Status
         </div>
         #}
-        <a class="panel-heading" data-toggle="collapse" href="#UPScollapse" style="text-decoration:none !important;">
-                UPS Status
-        </a>
+        <div class="panel-heading">
+            <a class="panel-heading" data-toggle="collapse" href="#UPScollapse" style="text-decoration:none !important;">
+                    UPS Status
+            </a>
+        </div>
         <div id="UPScollapse" class="panel-collapse collapse in">
             <ul class="list-group ">
                 {% for ups in UPSs %}
