--- a/app/Resources/views/UPSModule.html.twig
+++ b/app/Resources/views/UPSModule.html.twig
@@ -3,11 +3,11 @@
             UPS Status
         </div>
         #}
-        <div class="panel-heading">
-            <a class="panel-heading" data-toggle="collapse" href="#UPScollapse" style="text-decoration:none !important;">
-                    UPS Status
-            </a>
-        </div>
+        <a class="panel-heading" data-toggle="collapse" href="#UPScollapse" style="text-decoration:none !important;">
+            <div class = "row">
+                UPS Status
+            </div>
+        </a>
         <div id="UPScollapse" class="panel-collapse collapse in">
             <ul class="list-group ">
                 {% for ups in UPSs %}
