--- a/app/Resources/views/UPSModule.html.twig
+++ b/app/Resources/views/UPSModule.html.twig
@@ -3,7 +3,7 @@
             UPS Status
         </div>
         #}
-        <a class="panel-heading" data-toggle="collapse" href="#UPScollapse" style="text-decoration:none !important;">
+        <a class="panel-heading" data-toggle="collapse" href="#UPScollapse">
             <div class = "row">
                 UPS Status
             </div>
