Modified UPS status

--- a/app/Resources/views/UPSModule.html.twig
+++ b/app/Resources/views/UPSModule.html.twig
@@ -3,9 +3,11 @@
             UPS Status
         </div>
         #}
-        <a class="panel-heading" data-toggle="collapse" href="#UPScollapse">
-            <div class = "row">
-                UPS Status
+        <a data-toggle="collapse" href="#UPScollapse">
+            <div class="panel-heading" >
+                <div class = "row">
+                    UPS Status
+                </div>
             </div>
         </a>
         <div id="UPScollapse" class="panel-collapse collapse in">
