--- a/app/Resources/views/UPSModule.html.twig
+++ b/app/Resources/views/UPSModule.html.twig
@@ -4,10 +4,8 @@
         </div>
         #}
         <div class="panel-heading" >
-            <a data-toggle="collapse" href="#UPScollapse">
-                <div class = "row">
-                    UPS Status
-                </div>
+            <a data-toggle="collapse" href="#UPScollapse" syle="text-decoration:none !important;">
+                UPS Status
             </a>
         </div>
         <div id="UPScollapse" class="panel-collapse collapse in">
