--- a/app/Resources/views/UPSModule.html.twig
+++ b/app/Resources/views/UPSModule.html.twig
@@ -3,10 +3,8 @@
             UPS Status
         </div>
         #}
-        <div class="panel-heading" >
-            <a data-toggle="collapse" href="#UPScollapse" syle="text-decoration:none !important;">
-                UPS Status
-            </a>
+        <div class="panel-heading" role="button" data-toggle="collapse" data-target="#UPScollapse">
+            UPS Status
         </div>
         <div id="UPScollapse" class="panel-collapse collapse in">
             <ul class="list-group ">
