--- a/app/Resources/views/PeopleCountingModule.html.twig
+++ b/app/Resources/views/PeopleCountingModule.html.twig
@@ -1,10 +1,12 @@
     <div class="panel panel-info">
-        <div class="panel-heading">
+        <div class="panel-heading" role="button" data-toggle="collapse" data-target="#PCcollapse">
             Current Occupancy
         </div>
-        <ul class="list-group">
-            {% for venue in venues %}
-                <li class="list-group-item" id="venue-{{ venue.id }}">{{ venue.name }}: 0</li>
-            {% endfor %}
-        </ul>
+        <div id="PCcollapse" class="panel-collapse collapse in">
+            <ul class="list-group">
+                {% for venue in venues %}
+                    <li class="list-group-item" id="venue-{{ venue.id }}">{{ venue.name }}: 0</li>
+                {% endfor %}
+            </ul>
+        </div>
     </div>
