--- a/app/Resources/views/fireRegister.html.twig
+++ b/app/Resources/views/fireRegister.html.twig
@@ -16,7 +16,7 @@ Event Control Fire Register
                         {% if attendees is empty %}
                             No attendees signed in
                         {% else %}
-                            <table class="table table-striped">
+                            <table id="Register" class="table table-striped">
                                 <tbody>
                                     <tr>
                                         <td><strong>Name</strong></td>
@@ -62,4 +62,18 @@ Event Control Fire Register
             {% include 'sidebar.twig' %}
         {% endblock %}
     {% endembed %}
+{% endblock %}
+{% block scripts %}
+    <script type="text/javascript">
+    $(function () {
+        $('[data-toggle="tooltip"]').tooltip();
+    });
+
+    $(document).ready(function() {
+        $('#Register').DataTable( {
+            "pageLength": 25,
+            "lengthMenu": [ [10, 15, 25, 50, -1], [10, 15, 25, 50, "All"] ]
+        });
+    });
+    </script>
 {% endblock %}
