--- a/app/Resources/views/fireRegister.html.twig
+++ b/app/Resources/views/fireRegister.html.twig
@@ -69,7 +69,7 @@ Event Control Fire Register
     <script type="text/javascript">
         $(document).ready(function() {
             $('#Register').DataTable( {
-                "order": [[ 4, 'asc' ], [ 3, 'desc' ]],
+                "order": [[ 4, 'desc' ], [ 3, 'desc' ]],
                 "pageLength": 25,
                 "lengthMenu": [ [10, 15, 25, 50, -1], [10, 15, 25, 50, "All"] ]
             });
