--- a/app/Resources/views/fireRegister.html.twig
+++ b/app/Resources/views/fireRegister.html.twig
@@ -19,11 +19,11 @@ Event Control Fire Register
                             <table id="Register" class="table table-striped">
                                 <thead>
                                     <tr>
-                                        <td>Name</td>
-                                        <td>Phone</td>
-                                        <td>Email</td>
-                                        <td>Time In</td>
-                                        <td>Time Out</td>
+                                        <th>Name</th>
+                                        <th>Phone</th>
+                                        <th>Email</th>
+                                        <th>Time In</th>
+                                        <th>Time Out</th>
                                     </tr>
                                 </thead>
                                 <tbody>
