--- a/app/Resources/views/pdfRegister.html.twig
+++ b/app/Resources/views/pdfRegister.html.twig
@@ -18,14 +18,16 @@
             <div class="row">
                 <div class="col-md-12">
                     <table class="table table-striped">
-                        <tbody>
+                        <thead>
                             <tr>
-                                <td><strong>Name</strong></td>
-                                <td><strong>Phone</strong></td>
-                                <td><strong>Email</strong></td>
-                                <td><strong>Time In</strong></td>
-                                <td><strong>Time Out</strong></td>
+                                <th>Name</th>
+                                <th>Phone</th>
+                                <th>Email</th>
+                                <th>Time In</th>
+                                <th>Time Out</th>
                             </tr>
+                        </thead>
+                        <tbody>
                             {% for attendee in attendees %}
                                 <tr>
                                     <td>{{ attendee.name }}</td>
