--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -31,6 +31,13 @@
                 {% endfor %}
             </select>
         </div>
+        <button type="button" id="viewAlertsButton" style="display: none;" class="btn btn-warning btn-block" onclick="AlertShow()">
+            <div class="row" id="viewAlerts">
+                <div class="col-md-12 col-xs-12">
+                    <strong>View Alerts</strong>
+                </div>
+            </div>
+        </button>
     {% endif %}
 {% endif %}
 <div class="row">
