Modified alerts button

--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -372,6 +372,7 @@
                     loadAlertModal(alertData, alertNumber);
                 } else {
                     $('#mainModal').modal('hide');
+                    $("#viewAlertsButton").hide();
                 }
                 AlertCheck();
             }
