--- a/app/Resources/views/peoplecounting.html.twig
+++ b/app/Resources/views/peoplecounting.html.twig
@@ -36,8 +36,8 @@
                                 </tr>
                                 {% for venue in venues %}
                                     <tr>
-                                        <td>{{ venue.id }}</td>
-                                        <td>{{ venue.name }}</td>
+                                        <td>{{ venue.venue_id.id }}</td>
+                                        <td>{{ venue.venue_id.name }}</td>
                                         <td>{{ venue.doors|date('Y-m-d H:i:s', "Europe/London") }}</td>
                                         <td>{{ venue.count.running_count_in }}</td>
                                         <td>{{ venue.count.running_count_out }}</td>
