--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -39,6 +39,13 @@
             </div>
         </button>
     {% endif %}
+    <button type="button" id="viewAlertsButton" style="display: none;" class="btn btn-warning btn-block" onclick="AlertShow()">
+        <div class="row" id="viewAlerts">
+            <div class="col-md-12 col-xs-12">
+                <strong>View Alerts</strong>
+            </div>
+        </div>
+    </button>
 {% endif %}
 <div class="row">
     <h4>Log Functions</h4>
