--- a/app/Resources/views/eventForm.html.twig
+++ b/app/Resources/views/eventForm.html.twig
@@ -105,7 +105,7 @@ Event Entry Form
                                 </div>
                             </div>
                         </div><br>
-                        <div class="row">
+                        {#<div class="row">
                             <div class="form-group">
                                 <div class="col-md-2">
                                     {{ form_label(form.venues) }}
@@ -117,7 +117,7 @@ Event Entry Form
                                     {% endfor %}
                                 </div>
                             </div>
-                        </div><br>
+                        </div><br> #}
                         <div class="row">   
                             <div class="form-group">
                                 <div class="col-md-2">
