--- a/app/Resources/views/form.html.twig
+++ b/app/Resources/views/form.html.twig
@@ -135,6 +135,7 @@ Control Room Log New Entry
 
         $("#new_entry_form_location").easyAutocomplete(locationOptions);
         $("#new_entry_form_reported_by").easyAutocomplete(reportedOptions);
+        $("#log_reported_by").easyAutocomplete(reportedOptions);
 
     </script>        
 {% endblock %}
