Fix for autocomplete

--- a/app/Resources/views/form.html.twig
+++ b/app/Resources/views/form.html.twig
@@ -133,8 +133,7 @@ Control Room Log New Entry
             }
         };
 
-        //$("#new_entry_form_location").easyAutocomplete(locationOptions);
-        //$("#new_entry_form_reported_by").easyAutocomplete(reportedOptions);
+        $("#log_location").easyAutocomplete(locationOptions);
         $("#log_reported_by").easyAutocomplete(reportedOptions);
 
     </script>        
