--- a/app/Resources/views/editForm.html.twig
+++ b/app/Resources/views/editForm.html.twig
@@ -347,9 +347,10 @@ Control Room Log Edit
 
             function initMap() {
                 var map = new google.maps.Map(document.getElementById('logMap'), {
-                    zoom: 17,
+                    zoom: 19,
                     //center: {lat: 51.379300, lng: -2.32700},
-                    center: {lat: {{ eventLat }}, lng: {{ eventLong }}},
+                    //center: {lat: {{ eventLat }}, lng: {{ eventLong }}},
+                    center: {lat:{{ entry.latitude }}, lng:{{ entry.longitude }}},
                     mapTypeId: 'satellite'
                 });
 
