--- a/app/Resources/views/upsList.html.twig
+++ b/app/Resources/views/upsList.html.twig
@@ -41,6 +41,7 @@ UPS Settings
                                 </tbody>
                             </table>
                         {% endif %}
+                        {{ ListUPSs }}
                         <a href="{{ path('new_ups') }}"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true" aria-label="Add"></span></a>
                     </div>
                 </div>
