added ups to sidebar

--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -193,6 +193,13 @@
                 </a>
             </li>
             <li>
+                <a href="{{ path('ups_list') }}" style="margin-bottom:4px;white-space: normal;" role="button">
+                    <div class="row">
+                        UPS System Settings
+                    </div>
+                </a>
+            </li>
+            <li>
                 <a href="{{ path('audit') }}" style="margin-bottom:4px;white-space: normal;" role="button">
                     <div class="row">
                         Audit Log
