--- a/app/Resources/views/upsList.html.twig
+++ b/app/Resources/views/upsList.html.twig
@@ -34,7 +34,7 @@ UPS Settings
                                             <td>{{ ListUPS.name }}</td>
                                             <td>{{ ListUPS.location }}</td>
                                             <td>{{ ListUPS.power }}</td>
-                                            <td>{{ ListUPS.Last }}</td>
+                                            <td>{{ ListUPS.Last.status }}</td>
                                             <td><a href="{{ path('edit_ups', {'editId': ListUPS.id}) }}"><span class="glyphicon glyphicon-pencil" aria-hidden="true" aria-label="Edit"></span></a></td>
                                         </tr>
                                         {{ ListUPS }}
