--- a/app/Resources/views/upsList.html.twig
+++ b/app/Resources/views/upsList.html.twig
@@ -23,7 +23,7 @@ UPS Settings
                                         <th>Name</th>
                                         <th>Location</th>
                                         <th>Power</td>
-                                        <th>Last Status</td>
+                                        <th>Last Status (Timestamp)</td>
                                         <th>Edit</td>
                                     </tr>
                                 </thead>
@@ -34,7 +34,7 @@ UPS Settings
                                             <td>{{ ListUPS.name }}</td>
                                             <td>{{ ListUPS.location }}</td>
                                             <td>{{ ListUPS.power }}</td>
-                                            <td>{{ ListUPS.Last.status }}</td>
+                                            <td>{{ ListUPS.Last.status }} {{ ListUPS.Last.timestamp|date('Y-m-d H:i', "Europe/London") }}</td>
                                             <td><a href="{{ path('edit_ups', {'editId': ListUPS.id}) }}"><span class="glyphicon glyphicon-pencil" aria-hidden="true" aria-label="Edit"></span></a></td>
                                         </tr>
                                         {{ ListUPS }}
