--- a/app/Resources/views/upsForm.html.twig
+++ b/app/Resources/views/upsForm.html.twig
@@ -44,6 +44,19 @@ UPS
                                 </div>
                             </div>
                         </div><br>
+                        <div class="row">   
+                            <div class="form-group">
+                                <div class="col-md-2">
+                                    {{ form_label(form.Events) }} 
+                                    {{ form_errors(form.Events) }}
+                                </div>
+                                <div class="col-md-4">
+                                    {% for Event in form.Events %}
+                                        {{ form_widget(Event) }} {{ form_label(Event) }}<br>
+                                    {% endfor %}
+                                </div>
+                            </div>
+                        </div><br>
                         <div class="row">  
                             <div class="col-md-8">
                                 {% if ups.id is defined %}
