Updated alert acknowledgement system

--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -373,6 +373,7 @@
                 } else {
                     $('#mainModal').modal('hide');
                     $("#viewAlertsButton").hide();
+                    display = false;
                 }
                 AlertCheck();
             }
