Modified modal contorls

--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -375,6 +375,7 @@
                     $("#viewAlertsButton").hide();
                     $('body').removeClass('modal-open');
                     $('.modal-backdrop').remove();
+                    $('.modal-backdrop.fade.in').remove();
                     display = false;
                 }
                 AlertCheck();
