Added aditional sidebar

--- a/app/Resources/views/fireRegister.html.twig
+++ b/app/Resources/views/fireRegister.html.twig
@@ -62,6 +62,7 @@ Event Control Fire Register
         {% endblock %}
         {% block sidebar %}
             {% include 'sidebar.twig' %}
+            {% include 'darksky.html.twig' %}
         {% endblock %}
     {% endembed %}
 {% endblock %}
