--- a/app/Resources/views/form.html.twig
+++ b/app/Resources/views/form.html.twig
@@ -93,6 +93,7 @@ Control Room Log New Entry
         {% endblock %}
         {% block sidebar %}
             {% include 'sidebar.twig' %}
+            {% include 'darksky.html.twig' %}
         {% endblock %}
     {% endembed %}
 {% endblock %}
