--- a/app/Resources/views/log2.html.twig
+++ b/app/Resources/views/log2.html.twig
@@ -123,6 +123,7 @@ Control Room Log
         {% endblock %}
         {% block sidebar %}
             {% include 'sidebar.twig' %}
+            {% include 'darksky.html.twig' %}
         {% endblock %}
     {% endembed %}
 {% endblock %}
