--- a/app/Resources/views/map.html.twig
+++ b/app/Resources/views/map.html.twig
@@ -66,6 +66,7 @@ Control Room Log Map
         {% endblock %}
         {% block sidebar %}
             {% include 'sidebar.twig' %}
+            {% include 'darksky.html.twig' %}
         {% endblock %}
     {% endembed %}
 {% endblock %}
