--- a/app/Resources/views/editForm.html.twig
+++ b/app/Resources/views/editForm.html.twig
@@ -210,6 +210,7 @@ Control Room Log Edit
         {% endblock %}
         {% block sidebar %}
             {% include 'sidebar.twig' %}
+            {% include 'darksky.html.twig' %}
         {% endblock %}
     {% endembed %}
 {% endblock %}
