--- a/app/Resources/views/iframe.html.twig
+++ b/app/Resources/views/iframe.html.twig
@@ -19,7 +19,7 @@ Event Control
             {% endif %}
             {% if iframeDynamic is defined %}
                 <script type="text/javascript">
-                    $('#iframe').attr('src',{{ iframeDynamic|raw }});  
+                    $('#iframe').attr('src',"{{ iframeDynamic|raw }}");  
                 </script>
             {% endif %}
         {% endblock %}
