--- a/app/Resources/views/editForm.html.twig
+++ b/app/Resources/views/editForm.html.twig
@@ -77,6 +77,10 @@ Control Room Log Edit
                                                 {{ form_errors(log_entry.log_supportFile) }}
                                                 {{ form_widget(log_entry.log_supportFile) }}
                                             </div>
+                                            {% for file in logFiles %}
+                                                {{ file.file }}
+                                                {{ file.path }}
+                                            {% endfor %}
                                         </div>
                                     </div>
                                 {% else %}
