--- a/app/Resources/views/editForm.html.twig
+++ b/app/Resources/views/editForm.html.twig
@@ -125,6 +125,7 @@ Control Room Log Edit
                                                     <div class="form-group">
                                                         {{ form_errors(log_entry.log_supportFile) }}
                                                         {{ form_widget(log_entry.log_supportFile) }}
+                                                        {{ logFiles }}
                                                         {% for file in logFiles %}
                                                             {{ file.file }}
                                                             {{ file.path }}
