--- a/app/Resources/views/editForm.html.twig
+++ b/app/Resources/views/editForm.html.twig
@@ -126,9 +126,10 @@ Control Room Log Edit
                                                         {{ form_errors(log_entry.log_supportFile) }}
                                                         {{ form_widget(log_entry.log_supportFile) }}
                                                         {{ logFiles }}
+							{{ dump(logFiles) }}
                                                         {% for file in logFiles %}
-                                                            {{ file.file }}
-                                                            {{ file.path }}
+                                                            {{ dump(file.file) }}
+                                                            {{ dump(file.path) }}
                                                         {% endfor %}
                                                     </div>
                                                 </div>
