--- a/app/Resources/views/editForm.html.twig
+++ b/app/Resources/views/editForm.html.twig
@@ -77,6 +77,7 @@ Control Room Log Edit
                                                 {{ form_errors(log_entry.log_supportFile) }}
                                                 {{ form_widget(log_entry.log_supportFile) }}
                                             </div>
+					    {{ dump(logFiles) }}
                                             {% for file in logFiles %}
                                                 {{ file.file }}
                                                 {{ file.path }}
@@ -125,9 +126,6 @@ Control Room Log Edit
                                                     <div class="form-group">
                                                         {{ form_errors(log_entry.log_supportFile) }}
                                                         {{ form_widget(log_entry.log_supportFile) }}
-                                                        {% for file in logFiles %}
-                                                            {{ file }}
-                                                        {% endfor %}
                                                     </div>
                                                 </div>
                                             </div>
