--- a/app/Resources/views/editForm.html.twig
+++ b/app/Resources/views/editForm.html.twig
@@ -74,6 +74,7 @@ Control Room Log Edit
                                     <div class="row">
                                         <div class="col-md-12">
                                             <div class="form-group">
+					    	{{ form_label(log_entry.log_supportFile) }}
                                                 {{ form_errors(log_entry.log_supportFile) }}
                                                 {{ form_widget(log_entry.log_supportFile) }}
                                             </div>
@@ -119,6 +120,7 @@ Control Room Log Edit
                                             <div class="row">
                                                 <div class="col-md-12">
                                                     <div class="form-group">
+						    	{{ form_label(log_entry.log_supportFile) }}
                                                         {{ form_errors(log_entry.log_supportFile) }}
                                                         {{ form_widget(log_entry.log_supportFile) }}
                                                     </div>
@@ -134,12 +136,6 @@ Control Room Log Edit
                                     </div>
                                     <br>
                                 {% endif %}
-				{{ dump(logFiles) }}
-			    	{% for file in logFiles %}
-					{{ file.file }}
-					{{ dump(file) }}
-					{{ file.path }}
-			    	{% endfor %}
                             <div id="submit_button">
                                 {{ form_widget(log_entry.submit) }} <br>
                                 {{ form_end(log_entry) }}
