Modifications for collapsing sidebar

--- a/app/Resources/views/3-9.html.twig
+++ b/app/Resources/views/3-9.html.twig
@@ -1,10 +1,13 @@
 <div class="page-header-push">
 </div>
 <div class="container-fluid">
-    <div class="col-sm-2 col-md-2 sidebar">
+    <div class="col-sm-2 col-md-2 col-xs-6 sidebar sidebar-offcanvas">
         {% block sidebar %}{% endblock %}
     </div>
-    <div class="col-sm-10 col-md-10 content">
+    <div class="col-xs-12 col-sm-10 col-md-10 content">
+            <p class="pull-right visible-xs">
+                <button type="button" class="btn btn-primary btn-xs" data-toggle="offcanvas" title="Toggle sidebar"><i class="fa fa-chevron-right"></i></button>
+            </p>
         {% block content %}{% endblock %}
     </div>
 </div>
