--- a/app/Resources/views/3-9.html.twig
+++ b/app/Resources/views/3-9.html.twig
@@ -1,7 +1,7 @@
 <div class="page-header-push">
 </div>
 <div class="container-fluid">
-    <div class="col-sm-2 col-md-2 col-xs-6 sidebar sidebar-offcanvas">
+    <div class="col-sm-2 col-md-2 col-xs-6 sidebar">
         {% block sidebar %}{% endblock %}
     </div>
     <div class="col-xs-12 col-sm-10 col-md-10 content">
