--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -160,52 +160,6 @@
 
 #selectFilter option { color: blue; }
 
-/*
- * Off Canvas
- * --------------------------------------------------
- */
-@media screen and (max-width: 767px) {
-  .row-offcanvas {
-    position: relative;
-    -webkit-transition: all .25s ease-out;
-         -o-transition: all .25s ease-out;
-            transition: all .25s ease-out;
-  }
-
-  .row-offcanvas-right {
-    right: 0;
-  }
-
-  .row-offcanvas-left {
-    left: 0;
-  }
-
-  .row-offcanvas-right
-  .sidebar-offcanvas {
-    right: -60%; /* 6 columns */
-  }
-
-  .row-offcanvas-left
-  .sidebar-offcanvas {
-    left: -60%; /* 6 columns */
-  }
-
-  .row-offcanvas-right.active {
-    right: 60%; /* 6 columns */
-  }
-
-  .row-offcanvas-left.active {
-    left: 60%; /* 6 columns */
-  }
-
-  .sidebar-offcanvas {
-    position: absolute;
-    top: 0;
-    width: 60%; /* 6 columns */
-  }
-}
-
-
 </style>
 {% endblock %}
 
@@ -265,18 +219,7 @@
         function resizeHeader() {
             $(".page-header-push").height($(".page-header").height()+3);
         }
-        
-        function toggleOffCanvas() {
-            $('[data-toggle="offcanvas"]').click(function () {
-                $('.row-offcanvas').toggleClass('active');
-            });
-        }
-        
-        $(document).ready(function() {
-            resizeHeader();
-            toggleOffCanvas();
-        }
-        
+        $(document).ready(resizeHeader);
         $(window).resize(resizeHeader);
         
         {% if app.user %}
