Modified header font sizes

--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -160,6 +160,15 @@
 
 #selectFilter option { color: blue; }
 
+@media (max-width: @screen-xs) {
+    body{font-size: 10px;}
+}
+
+@media (max-width: @screen-sm) {
+    h1{font-size: 14px;}
+}
+
+
 </style>
 {% endblock %}
 
