--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -419,8 +419,16 @@
                 AlertCheck();
             }
 
+$(document).ready(function() {
+
+});
+
+
             $(document).ready(function()
             {
+                $('[data-toggle=offcanvas]').click(function() {
+                    $('.row-offcanvas').toggleClass('active');
+                });
                 $('#HeaderWeather').hide();
                 
                 updateClock();
