--- a/app/Resources/views/CtrLogBase.html.twig
+++ b/app/Resources/views/CtrLogBase.html.twig
@@ -29,7 +29,7 @@
     <div class="loader"></div>
     <div class="page-header">
         <div class="row">
-            <h1 class="col-md-5 text-nowrap">
+            <h1 class="col-xs-12 col-md-5 text-nowrap">
                 <button type="button" class="navbar-toggle" data-toggle="offcanvas" data-target=".sidebar-nav">
                      <span class="icon-bar"></span>
                      <span class="icon-bar"></span>
@@ -41,11 +41,11 @@
                 </small>
             </h1>
 
-                <h4 class="col-md-3 text-center"><br>
+                <h4 class="col-xs-12 col-md-3 text-center"><br>
                     <div id="HeaderWeather" class="alert alert-warning" role="alert" style="display: none;">
                     </div>
                 </h4>
-                <h1 class="col-md-4 text-right"">
+                <h1 class="col-xs-12 col-md-4 text-right"">
                     <div id="HeaderClock">
                     </div>
                 </h1>
