--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -209,6 +209,11 @@
 {% block hiddenheadertop %}
     <div class="container-fluid">
         <div class="col-md-5">
+            <button type="button" class="navbar-toggle" data-toggle="offcanvas" data-target=".sidebar-nav">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                 <span class="icon-bar"></span>
+            </button>
             <h1> Event Control</h1>
         </div>
         <div class="col-md-3">
