--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -165,7 +165,8 @@
 }
 
 @media (max-width: @screen-sm) {
-    h1{font-size: 14px;}
+    h1{font-size: 10px;}
+    #HeaderClock{font-size: 10px;}
 }
 
 /* collapsed sidebar styles */
