--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -209,15 +209,15 @@
 
 {% block hiddenheadertop %}
     <div class="container-fluid">
-        <div class="col-md-5">
-            <button type="button" class="navbar-toggle" data-target=".sidebar-nav">
+        <div class="col-xs-12 col-md-5">
+            <button type="button" class="navbar-toggle">
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                  <span class="icon-bar"></span>
             </button>
             <h1> Event Control</h1>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 col-xs-12">
             {% if app.user %}
                 <h4>
                     <div id="HeaderWeather">
@@ -225,7 +225,7 @@
                 </h4>
             {% endif %}
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 col-xs-12">
             {% if app.user %}
                 <h1>
                     <div id="HeaderClock">
