--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -145,7 +145,6 @@
     width: 100%;
 }
 
-
 #selectFilter { 
     color: black;
     background-color: white;
@@ -213,7 +212,8 @@
             <button type="button" class="navbar-toggle">
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
-                 <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                hello
             </button>
             <h1> Event Control</h1>
         </div>
