--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -203,20 +203,18 @@
 {% endblock %}
 
 {% block headertop %}
+    <button type="button" class="navbar-toggle" data-toggle="offcanvas" data-target=".sidebar-nav">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+    </button>
     Event Control
 {% endblock %}
 
 {% block hiddenheadertop %}
     <div class="container-fluid">
         <div class="col-xs-12 col-md-5">
-            <button type="button" id="navbar-toggle">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                hello
-            </button>
-            hello
-            <h1> Event Control</h1>
+            <h1>Event Control</h1>
         </div>
         <div class="col-md-3 col-xs-12">
             {% if app.user %}
