--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -203,7 +203,7 @@
 {% endblock %}
 
 {% block headertop %}
-    <button type="button" class="navbar-toggle" data-toggle="offcanvas" data-target=".sidebar-nav">
+    <button type="button" class="navbar-toggle">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
