--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -203,11 +203,10 @@
 {% endblock %}
 
 {% block headertop %}
-    <button type="button" class="navbar-toggle">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        Hello
+    <button type="button" data-toggle="offcanvas" data-target=".sidebar-nav">
+        <span class="icon-bar">-</span>
+        <span class="icon-bar">-</span>
+        <span class="icon-bar">-</span>
     </button>
     Event Control
 {% endblock %}
