--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -202,10 +202,8 @@
 {% endblock %}
 
 {% block headertop %}
-    <button type="button" data-toggle="offcanvas" data-target=".sidebar-nav">
-        <span class="icon-bar">-</span>
-        <span class="icon-bar">-</span>
-        <span class="icon-bar">-</span>
+    <button type="button" class="btn data-toggle="offcanvas" data-target=".sidebar-nav">
+        <span class="glyphicon glyphicon-menu-hamburger"></span>
     </button>
     Event Control
 {% endblock %}
