--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -202,7 +202,7 @@
 {% endblock %}
 
 {% block headertop %}
-    <button type="button" class="btn data-toggle="offcanvas" data-target=".sidebar-nav">
+    <button type="button" class="btn" data-toggle="offcanvas" data-target=".sidebar-nav">
         <span class="glyphicon glyphicon-menu-hamburger"></span>
     </button>
     Event Control
