--- a/app/Resources/views/CtrLogBase.html.twig
+++ b/app/Resources/views/CtrLogBase.html.twig
@@ -41,6 +41,9 @@
                     </div>
                 </h4>
                 <h2 class="col-xs-12 col-md-4 text-right">
+                    <button type="button" id="sidebarShow" class="btn" data-toggle="offcanvas" data-target=".sidebar-nav">
+                        <span class="glyphicon glyphicon-menu-hamburger"></span>
+                    </button>
                     <div id="HeaderClock">
                     </div>
                 </h1>
