--- a/app/Resources/views/CtrLogBase.html.twig
+++ b/app/Resources/views/CtrLogBase.html.twig
@@ -36,14 +36,16 @@
                 </small>
             </h1>
 
-                <h4 class="col-xs-12 col-md-3 text-center"><br>
+                <h4 class="col-xs-3 col-md-2 text-center"><br>
                     <div id="HeaderWeather" class="alert alert-warning" role="alert" style="display: none;">
                     </div>
                 </h4>
-                <h2 class="col-xs-12 col-md-4 text-right">
+                <div class="col-xs-1 col-md-1 text-left">
                     <button type="button" id="sidebarShow" class="btn" data-toggle="offcanvas" data-target=".sidebar-nav">
                         <span class="glyphicon glyphicon-menu-hamburger"></span>
                     </button>
+                </div>
+                <h2 class="col-xs-8 col-md-4 text-right">
                     <div id="HeaderClock">
                     </div>
                 </h1>
