--- a/app/Resources/views/CtrLogBase.html.twig
+++ b/app/Resources/views/CtrLogBase.html.twig
@@ -36,16 +36,16 @@
                 </small>
             </h1>
 
-                <h4 class="col-xs-12 col-md-2 text-center"><br>
+                <h4 class="col-xs-12 col-md-2 text-center" hidden-xs><br>
                     <div id="HeaderWeather" class="alert alert-warning" role="alert" style="display: none;">
                     </div>
                 </h4>
-                <div class="col-xs-1 col-md-1 text-left">
+                <div class="col-xs-1 col-md-1">
                     <button type="button" id="sidebarShow" class="btn" data-toggle="offcanvas" data-target=".sidebar-nav">
                         <span class="glyphicon glyphicon-menu-hamburger"></span>
                     </button>
                 </div>
-                <h2 class="col-xs-11 col-md-4 text-right">
+                <h2 class="col-xs-11 col-md-4 text-right" hidden-xs hidden-sm>
                     <div id="HeaderClock">
                     </div>
                 </h1>
