--- a/app/Resources/views/CtrLogBase.html.twig
+++ b/app/Resources/views/CtrLogBase.html.twig
@@ -36,7 +36,7 @@
                 </small>
             </h1>
 
-                <h4 class="col-xs-12 col-md-2 text-center" hidden-xs><br>
+                <h4 class="col-md-2 text-center hidden-xs"><br>
                     <div id="HeaderWeather" class="alert alert-warning" role="alert" style="display: none;">
                     </div>
                 </h4>
@@ -45,7 +45,7 @@
                         <span class="glyphicon glyphicon-menu-hamburger"></span>
                     </button>
                 </div>
-                <h2 class="col-xs-11 col-md-4 text-right" hidden-xs hidden-sm>
+                <h2 class="col-md-4 text-right hidden-xs hidden-sm">
                     <div id="HeaderClock">
                     </div>
                 </h1>
