--- a/app/Resources/views/CtrLogBase.html.twig
+++ b/app/Resources/views/CtrLogBase.html.twig
@@ -40,7 +40,7 @@
                     <div id="HeaderWeather" class="alert alert-warning" role="alert" style="display: none;">
                     </div>
                 </h4>
-                <div class="col-xs-1 col-md-1">
+                <div class="col-xs-1 col-md-1" id="sidebarShowDiv">
                     <button type="button" id="sidebarShow" class="btn" data-toggle="offcanvas" data-target=".sidebar-nav">
                         <span class="glyphicon glyphicon-menu-hamburger"></span>
                     </button>
