--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -170,7 +170,11 @@
 
   #sidebarShow {
     visibility: collapse;
-    padding-bottom: 6px;
+
+  }
+  
+  #sidebarShowDiv {
+    padding-bottom: 5px;
   }
 
 /* collapsed sidebar styles */
