--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -7,7 +7,8 @@
             <strong>User:</strong> {{ app.user.username }}
         </a>
         <br>
-        <a href="{{ path('event_weather_radar') }}">
+        <a href="{{ path('event_weather_radar') }}"></a>
+        <a href="javascript:window.open('http://http://premium.raintoday.co.uk/mobile','Weather radar & forecast','width=800,height=800')">
             <div id="SidebarWeather"><strong>Weather:</strong> {{ activeEventWeather(app.user.id) }}</div>
         </a>
         {% if is_granted('ROLE_FIELD') %}
