Added ref column to tablesa

--- a/app/Resources/views/logTable2.html.twig
+++ b/app/Resources/views/logTable2.html.twig
@@ -7,6 +7,7 @@
                 <tr>
                     <th>Log Time</th>
                     <th>Log Title</th>
+                    <th>Ref</th>
                     <th>Location</th>
                     <th>Reported By</th>
                     <th><br></th>
@@ -31,6 +32,7 @@
                             {% endif %}
                         </td>
                         <td><a href="{{ path('edit_entry', {'id': log.id}) }}">{{ log.log_blurb }}</a></td>
+                        <td>{{ log.ref }}</td>
                         <td>{{ log.location }}</td>
                         <td>{{ log.reported_by }}</td>
                         <td>
